Tehtävä 2 tehty viikolta 2

--- a/viikko2/project-reader/pyproject.toml
+++ b/viikko2/project-reader/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Kalle Ilves <kalle.ilves@helsinki.fi>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+tomli = "^1.2.2"
 
 [tool.poetry.dev-dependencies]
 
