--- a/viikko3/web-login-robot/pyproject.toml
+++ b/viikko3/web-login-robot/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Kalle Ilves <kalle.ilves@helsinki.fi>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 Flask = "^2.0.2"
+webdrivermanager = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 robotframework = "^4.1.2"
